bad/assign_arr_elem_string_void.example_compiler_output
ERROR
[1mbad/assign_arr_elem_string_void.lat:5:21: [1;31merror: [0;1massigning to `string` from incompatible type `void`[m
	(new string[3])[1] = vfunc();
	                   [1;32m^[m
